--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
   </header>
   <!-- navigation -->
-  <nav class="main-nav">
+  <nav class="nav">
     <a class="nav-link" href="#"><img src="svg/home.svg" alt="home navigation link"></a>
     <a class="nav-link" href="#"><img src="svg/bar-chart.svg" alt="charts navigation link"></a>
     <a class="nav-link" href="#"><img src="svg/members.svg" alt="members navigation link"></a>
     <a class="nav-link" href="#"><img src="svg/settings.svg" alt="settings navigation link"></a>
   </nav>
 
-  <main>
+  <main class="main">
     <div class="main-header"> <!-- row -->
       <h2 class="headline">Dashboard</h2>
       <div class="tab"></div>
@@ -216,9 +216,9 @@
     </section>
   </main>
 
-  <footer>
+<!--  <footer>-->
 
-  </footer>
+<!--  </footer>-->
 </div>
 </body>
 <script type="text/javascript" src="js/app.js"></script>
