--- a/index.html
+++ b/index.html
@@ -221,5 +221,6 @@
 <!--  </footer>-->
 </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </html>
