--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <section id="graphs" class="traffic">
       <div class="traffic-header">
-        <h3>Traffic</h3>
+        <h3>TRAFFIC</h3>
         <ul class="traffic-nav">
           <li class="traffic-nav-link">Hourly</li>
           <li class="traffic-nav-link">Daily</li>
@@ -78,7 +78,7 @@
     </section>
 
     <section class="daily">
-      <h3>Daily Traffic</h3>
+      <h3>DAILY TRAFFIC</h3>
       <div class="widget-container-half">
         <!--       element bar graph will attach to-->
         <canvas id="daily-chart"></canvas>
@@ -86,7 +86,7 @@
     </section>
 
     <section class="mobile">
-      <h3>Mobile users</h3>
+      <h3>MOBILE USERS</h3>
       <div class="widget-container-half">
         <!--       element bar graph will attach to-->
         <canvas id="doughnut-chart"></canvas>
@@ -94,6 +94,7 @@
     </section>
 
     <section id="social" class="social-stats">
+      <h3>SOCIAL STATS</h3>
       <div class="social-container">
         <div class="social-img">
           <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
