--- a/index.html
+++ b/index.html
@@ -155,17 +155,9 @@
       <!--  new members added dynamically -->
     </section>
 
-    <section class="recent-activity">
+    <section id="recent-activity" class="recent-activity">
       <h3>Recent Activity</h3>
       <!--  recent activity added dynamically -->
-      <div class="members-container">
-        <img class="members-profile-img" src="images/diego-g.jpg" alt="student profile image">
-        <div class=members-text-wrapper>
-          <p>comment</p>
-          <p>00/00/00</p>
-        </div>
-        <p> > </p>
-      </div>
     </section>
 
 
