--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!--  Stylesheets -->
   <!--  =========== -->
   <link rel="stylesheet" href="css/app.css">
-  <link rel="stylesheet" href="css/css-toggle-switch-master/dist/toggle-switch.css">
+<!--  <link rel="stylesheet" href="css/css-toggle-switch-master/dist/toggle-switch.css">-->
 
   <!--    favicon links  -->
   <!--    =============  -->
@@ -202,15 +202,15 @@
     <section id='settings' class="settings-container">
       <h3>Settings</h3>
 
-      <label class="switch-light switch-material" onclick="">
-        <input type="checkbox">
+      <label for="switch" class="" ></label>
+        <input id="switch" type="checkbox">
         <!--        <strong>Wireless</strong>-->
         <span>
           <span>Off</span>
           <span>On</span>
           <a></a>
         </span>
-      </label>
+
 
       <label for="timezone"></label>
       <select id="timezone" class="form-field">
@@ -464,6 +464,7 @@
         </option>
         <!--      TODO: add more options -->
       </select>
+
       <div class="settings-button">
         <button class="button-primary" id="save">Save</button>
         <button class="button-disabled" id="cancel">Cancel</button>
@@ -476,7 +477,7 @@
 
 <!--  Scripts -->
 <!--  ======= -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 <script type="text/javascript" src="js/membersInfo.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </html>
