add different time chart functionality to trafic chart

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
     <section id="graphs" class="traffic">
       <div class="traffic-header">
         <h3>TRAFFIC</h3>
-        <ul class="traffic-nav">
-          <li class="traffic-nav-link">Hourly</li>
-          <li class="traffic-nav-link">Daily</li>
-          <li class="traffic-nav-link">Weekly</li>
-          <li class="traffic-nav-link">Monthly</li>
+        <ul id="traffic-nav" class="traffic-nav">
+          <li id="hourly" class="">Hourly</li>
+          <li id="daily" class="">Daily</li>
+          <li id="weekly" class="">Weekly</li>
+          <li id="monthly" class="">Monthly</li>
         </ul>
       </div>
 
