--- a/index.html
+++ b/index.html
@@ -526,6 +526,6 @@
 <!--  Scripts -->
 <!--  ======= -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-<script type="text/javascript" src="js/membersInfo.js"></script>
+<script type="text/javascript" src="js/appInfo.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
 </html>
