refrator save and cancel button id's

--- a/index.html
+++ b/index.html
@@ -514,8 +514,8 @@
       </select>
 
       <div class="settings-button">
-        <button class="button-primary" id="save">Save</button>
-        <button class="button-disabled" id="cancel">Cancel</button>
+        <button id="save">Save class="button-primary" </button>
+        <button id="cancel" class="button-disabled" >Cancel</button>
       </div>
     </section>
   </main>
