--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
       </select>
 
       <div class="settings-button">
-        <button id="save">Save class="button-primary" </button>
+        <button id="save" class="button-primary">Save  </button>
         <button id="cancel" class="button-disabled" >Cancel</button>
       </div>
     </section>
