refractor traffic chart weekly datasets

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <ul id="traffic-nav" class="traffic-nav">
           <li id="hourly" class="">Hourly</li>
           <li id="daily" class="">Daily</li>
-          <li id="weekly" class="">Weekly</li>
+          <li id="weekly" class="active">Weekly</li>
           <li id="monthly" class="">Monthly</li>
         </ul>
       </div>
